--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,7 +13,7 @@ html
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 110%;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
