--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,16 @@ html
 	font-size: 1rem;
 }
 
+.footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+
 /* START of custom checkmark*/
 /* The checkbox-container */
 .checkbox-container {
@@ -34,8 +44,8 @@ html
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 85%;
+  width: 9%;
   background-color: #eee;
 }
 
@@ -475,6 +485,9 @@ label:hover {
   line-height: 1.2em;*/
   background-color: #ea6c81;
   color: #fff;
+  /* position: absolute; */
+  left: 0;
+  bottom: 0;
 }
 
 a {
