--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,16 +3,6 @@ html
 	font-size: 1rem;
 }
 
-.footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-}
-
 /* START of custom checkmark*/
 /* The checkbox-container */
 .checkbox-container {
@@ -44,8 +34,8 @@ html
   position: absolute;
   top: 0;
   left: 0;
-  height: 85%;
-  width: 9%;
+  height: 20px;
+  width: 20px;
   background-color: #eee;
 }
 
