foother test 12th may 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,13 @@ html
 	font-size: 1rem;
 }
 
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+
 /* START of custom checkmark*/
 /* The checkbox-container */
 .checkbox-container {
