--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,11 +3,11 @@ html
 	font-size: 1rem;
 }
 
-kaki {
+footer {
   text-align: center;
   padding: 3px;
-  background-color: #ea6c81;
-  color: #ea6c81;
+  background-color: DarkSalmon;
+  color: white;
 }
 
 /* START of custom checkmark*/
