--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,11 @@ html
 }
 
 footer {
+  position: relative;
   text-align: center;
   padding: 3px;
-  background-color: DarkSalmon;
+  bottom: 0;
+  background-color: #ea6c81;
   color: white;
 }
 
