foother test 12th may 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,7 +109,7 @@ body {
 
 footer {
   /* position:relative; */
-  position:absolute;
+  position:relative;
   text-align: center;
   padding: 3px;
   left: 0;
