foother test 12th may 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -107,7 +107,7 @@ body {
   /*font-size: 14px;*/
 }
 
-footer {
+.footers {
   /* position:relative; */
   position:absolute;
   text-align: center;
