--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,10 +102,10 @@ html
 body {
   font-family: "Bahnschrift", Helvetica, sans-serif;
   position: relative;
-  min-height: 200%;
-  min-height: 200vh;
+  /* min-height: 100%; */
+  /* min-height: 100vh; */
   /* padding-bottom: 55%; */
-  /*font-size: 14px;*/
+  /* font-size: 14px;*/
 }
 
 footer {
@@ -309,7 +309,7 @@ footer {
   /*display: grid;*/
   text-align: left;
   font-size: 0.7rem;
-  padding-bottom: 400px;
+  padding-bottom: 60vh;
   /*grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   width: 450px;
