--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -309,7 +309,7 @@ footer {
   /*display: grid;*/
   text-align: left;
   font-size: 0.7rem;
-  padding-bottom: 60vh;
+  padding-bottom: 60vmin;
   /*grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   width: 450px;
