--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,8 +102,8 @@ html
 body {
   font-family: "Bahnschrift", Helvetica, sans-serif;
   position: relative;
-  /* min-height: 100%; */
-  /* min-height: 100vh; */
+  /* min-height: 100%;
+  /* min-height: 100vh;
   /* padding-bottom: 55%; */
   /* font-size: 14px;*/
 }
@@ -114,6 +114,7 @@ footer {
   text-align: center;
   padding: 0px;
   padding-top: 3px;
+  /* padding-bottom: 50px; */
   left: 0;
   right: 0;
   bottom: 0;
@@ -307,10 +308,13 @@ footer {
 .options {
   /*margin: 1em auto;*/
   /*display: grid;*/
+  position: relative;
   text-align: left;
   font-size: 0.7rem;
   
   /* padding-bottom: 60vmin; */
+  
+  
   
   /*grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
