updated footer 12th May 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -112,7 +112,7 @@ footer {
   position:absolute;
   text-align: center;
   padding: 0px;
-  padding-top: 30px;
+  padding-top: 1rem;
   /* padding-bottom: 50px; */
   /* left: 0;
   right: 0;
