--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,7 +109,9 @@ body {
 
 footer {
   /* position:relative; */
-  position:sticky;
+  position:fixed;
+  left: 0;
+  bottom: 0;
   text-align: center;
   padding: 0px;
   padding-top: 1rem;
