--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,8 +109,8 @@ body {
 
 footer {
   /* position:relative; */
-  position:fixed;
-  left: 0;
+  position: -webkit-sticky;
+  position:sticky;
   bottom: 0;
   text-align: center;
   padding: 0px;
