updated footer 12th May 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,8 +109,8 @@ body {
 
 footer {
   /* position:relative; */
-  position: -webkit-sticky;
-  position:sticky;
+  /* position: -webkit-sticky; */
+  position:absolute;
   bottom: 0;
   text-align: center;
   padding: 0px;
