--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -111,7 +111,7 @@ footer {
   /* position:relative; */
   /* position: -webkit-sticky; */
   position:absolute;
-  bottom: 0;
+  bottom: 0rem;
   text-align: center;
   padding: 0px;
   padding-top: 1rem;
@@ -552,6 +552,7 @@ a:visited {
 	.container
 	{
 		max-width: 100%;
+    padding-bottom: 10rem;
 	}
 }
 
