updated footer 12th May 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,7 +110,7 @@ body {
 footer {
   /* position:relative; */
   /* position: -webkit-sticky; */
-  position:absolute;
+  position:fixed;
   bottom: 0;
   text-align: center;
   padding: 0px;
