updated footer 12th May 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,8 +129,10 @@ div.sticky {
   position: sticky;
   top: 0;
   background-color: #ea6c81;
-  padding: 50px;
-  font-size: 20px;
+  color: white;
+  padding: 1rem;
+  padding-bottom: 0.1rem;
+  font-size: 0.7rem;
 }
 
 /*.container {
