updated footer 13th May 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -326,7 +326,7 @@ div.sticky {
   font-size: 0.7rem;
   
   /* padding-bottom: 60vmin; */
-  padding-bottom: 4rem;
+  /* padding-bottom: 4rem; */
   
   
   /*grid-template-columns: repeat(3, 1fr);
