--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,6 +124,7 @@ footer {
   color: white;
 }
 
+/* footer */
 div.sticky {
   position: -webkit-sticky;
   position: sticky;
@@ -563,7 +564,8 @@ a:visited {
 	.container
 	{
 		max-width: 100%;
-    padding-bottom: 10rem;
+    /* padding-bottom: 10rem; */
+    padding-bottom: 3rem;
 	}
 }
 
