--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,10 +124,11 @@ footer {
   color: white;
 }
 
+/* footer */
 div.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+  position: -webkit-absoulte;
+  position: absolute;
+  bottom: 0;
   background-color: #ea6c81;
   color: white;
   padding: 1rem;
@@ -326,7 +327,7 @@ div.sticky {
   font-size: 0.7rem;
   
   /* padding-bottom: 60vmin; */
-  padding-bottom: 4rem;
+  /* padding-bottom: 4rem; */
   
   
   /*grid-template-columns: repeat(3, 1fr);
@@ -563,7 +564,8 @@ a:visited {
 	.container
 	{
 		max-width: 100%;
-    padding-bottom: 10rem;
+    /* padding-bottom: 10rem; */
+    padding-bottom: 3rem;
 	}
 }
 
