--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,20 +101,20 @@ html
 body {
   font-family: "Bahnschrift", Helvetica, sans-serif;
   position: relative;
-  /* min-height: 100%;
-  /* min-height: 100vh;
+  /* min-height: 100%; */
+  /* min-height: 100vh; */
   /* padding-bottom: 55%; */
   /* font-size: 14px;*/
 }
 
 footer {
   /* position:relative; */
-  position: -webkit-absolute;
-  position:absolute;
-  bottom: -12rem;
+  position: -webkit-sticky;
+  position:sticky;
+  top: 0;
   text-align: center;
   padding: 0px;
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
   /* padding-bottom: 50px; */
   /* left: 0;
   right: 0; */
