--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -105,13 +105,19 @@ body {
   /* min-height: 100vh; */
   /* padding-bottom: 55%; */
   /* font-size: 14px;*/
+  /* new lines */
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-footer {
+xxfooter {
   /* position:relative; */
-  position: -webkit-sticky;
+  /* position: -webkit-sticky; */
   position:sticky;
-  top: 0;
+  bottom: 0;
   text-align: center;
   padding: 0px;
   /* padding-top: 1rem; */
