--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -137,6 +137,7 @@ xxfooter {
 footer {
   background-color: #ea6c81;
   color: white;
+  padding-top: 1rem;
  }
 
 /* footer */
@@ -337,12 +338,12 @@ div.sticky {
 .options {
   /*margin: 1em auto;*/
   /*display: grid;*/
-  position: relative;
+  /* position: relative; */
   text-align: left;
   font-size: 0.7rem;
   
   /* padding-bottom: 60vmin; */
-  /* padding-bottom: 4rem; */
+  padding-bottom: 1rem;
   
   
   /*grid-template-columns: repeat(3, 1fr);
@@ -580,7 +581,7 @@ a:visited {
 	{
 		max-width: 100%;
     /* padding-bottom: 10rem; */
-    padding-bottom: 3rem;
+    /* padding-bottom: 3rem; */
 	}
 }
 
