Result bug fix 14th May 2022

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -335,7 +335,7 @@ footer {
   font-size: 0.7rem;
   
   /* padding-bottom: 60vmin; */
-  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
   
   
   /*grid-template-columns: repeat(3, 1fr);
